# scripts/bin/openapi.yml
@@ -87,15 +87,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PassengerNameRecord'
+              $ref: "#/components/schemas/PassengerNameRecord"
       responses:
-        '200':
+        "200":
           description: Passenger created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerNameRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerNameRecord"
+        "500":
           description: Failed to create passenger
       security:
         - bearerAuth: []
@@ -110,9 +110,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PassengerNameRecord'
+              $ref: "#/components/schemas/PassengerNameRecord"
       responses:
-        '200':
+        "200":
           description: Passenger updated successfully
           content:
             application/json:
@@ -155,7 +155,7 @@ paths:
                     type: string
                   email:
                     type: string
-        '500':
+        "500":
           description: Failed to update passenger
       security:
         - bearerAuth: []
@@ -175,13 +175,13 @@ paths:
                 id:
                   type: string
       responses:
-        '200':
+        "200":
           description: Passenger deleted successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerNameRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerNameRecord"
+        "500":
           description: Failed to delete passenger
       security:
         - bearerAuth: []
@@ -201,13 +201,13 @@ paths:
                 id:
                   type: string
       responses:
-        '200':
+        "200":
           description: Passenger found successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerNameRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerNameRecord"
+        "500":
           description: Failed to find passenger
       security:
         - bearerAuth: []
@@ -230,13 +230,13 @@ paths:
                 lastName:
                   type: string
       responses:
-        '200':
+        "200":
           description: Passenger found successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerNameRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerNameRecord"
+        "500":
           description: Failed to find passenger
       security:
         - bearerAuth: []
@@ -252,15 +252,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PassengerFlightRecord'
+              $ref: "#/components/schemas/PassengerFlightRecord"
       responses:
-        '200':
+        "200":
           description: Flight created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to create flight record
       security:
         - bearerAuth: []
@@ -275,15 +275,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PassengerFlightRecord'
+              $ref: "#/components/schemas/PassengerFlightRecord"
       responses:
-        '200':
+        "200":
           description: Flight updated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to update flight record
       security:
         - bearerAuth: []
@@ -303,13 +303,13 @@ paths:
                 id:
                   type: string
       responses:
-        '200':
+        "200":
           description: Flight deleted successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to delete flight record
       security:
         - bearerAuth: []
@@ -320,15 +320,15 @@ paths:
       description: フライトレコードを取得します
       summary: Get a flight record
       responses:
-        '200':
+        "200":
           description: Flight found successfully
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                  $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to find flight record
       security:
         - bearerAuth: []
@@ -351,9 +351,9 @@ paths:
                 password:
                   type: string
       responses:
-        '200':
+        "200":
           description: Account created successfully
-        '500':
+        "500":
           description: Failed to create user
       security:
         - bearerAuth: []
@@ -376,7 +376,7 @@ paths:
                 password:
                   type: string
       responses:
-        '200':
+        "200":
           description: Login successful
           content:
             application/json:
@@ -385,7 +385,7 @@ paths:
                 properties:
                   token:
                     type: string
-        '401':
+        "401":
           description: Invalid Login Credentials
   /accounts/info:
     get:
@@ -395,18 +395,27 @@ paths:
       description: アカウントにログインします
       summary: Login to an account
       responses:
-        '200':
+        "200":
           description: Login successful
           content:
             application/json:
               schema:
                 type: object
+                required:
+                  - login
+                  - name
+                  - role
+                  - terminal
                 properties:
                   login:
                     type: string
-                    required:
-                      - login
-        '401':
+                  name:
+                    type: string
+                  role:
+                    type: string
+                  terminal:
+                    type: string
+        "401":
           description: Invalid Login Credentials
       security:
         - bearerAuth: []
@@ -427,13 +436,13 @@ paths:
                 id:
                   type: string
       responses:
-        '200':
+        "200":
           description: Pass generated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to create passenger
       security:
         - bearerAuth: []
@@ -460,13 +469,13 @@ paths:
               required:
                 - firstName
       responses:
-        '200':
+        "200":
           description: Passenger found successfully
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PassengerFlightRecord'
-        '500':
+                  $ref: "#/components/schemas/PassengerFlightRecord"
+        "500":
           description: Failed to find passenger
